[package]
name = "use-kinematics-label"
description = "Primitive kinematics terminology labels for RustUse robotics"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-kinematics-label"
keywords = ["kinematics", "robotics", "label", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
