[package]
name = "use-robot-subsystem"
description = "Primitive robot subsystem vocabulary for RustUse robotics"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-robot-subsystem"
keywords = ["robot", "subsystem", "state", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
